Revision history for {{$dist->name}}

{{$NEXT}}

0.003     2013-07-05 18:04:20 PDT-0700 (Karen Etheridge)
          - rewrite code and HTML generation by using embedded templates in
            the .pm file and authors in __DATA__, and a custom Dist::Zilla
            plugin
          - updated list of PAUSE IDs, by re-scanning cpan-faces

0.002     2013-06-01 10:04:26 PDT-0700 (Karen Etheridge)
          - bump dependency on Acme::CPANAuthors to fix ::Search issue
            (RT#85779)

0.001     2013-05-29 20:18:53 PDT-0700 (Karen Etheridge)
          - Initial release.
