@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - simplify creation of ad-hoc author object at build time
 
 0.003     2013-07-05 18:04:20 PDT-0700 (Karen Etheridge)
           - rewrite code and HTML generation by using embedded templates in
